# jpegcam

./: AGENTS.md  README.md
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/assets/grain/: neo400.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  process_kernel.h
app/src/main/java/com/github/ma1co/pmcademo/app/: AdvancedFocusMeterView.java  BatteryView.java  CameraUtil.java  CinemaMatteView.java  ConnectivityManager.java  DiptychManager.java  DiptychOverlayView.java  ExitCompletedReceiver.java  Filepaths.java  GridLinesView.java  HardwareRecipeApplier.java  HttpServer.java  HudController.java  ImageProcessor.java  InputManager.java  LensProfileManager.java  LutCooker.java  LutEngine.java  MainActivity.java  MenuController.java  PlaybackController.java  ProReticleView.java  ProcessingQueueManager.java  RTLProfile.java  RecipeManager.java  SonyCameraManager.java  SonyDrawables.java  SonyFileScanner.java
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: strings.xml
lib/: AndroidManifest.xml
